Do not allow to create custom roles. Delete 'roles' and 'user_roles' tables
