# internal/user/dto.go
@@ -3,8 +3,50 @@ package user
 import (
 	"time"
 
-	"github.com/cyradin/fixik/internal/dict"
+	"github.com/cyradin/fixik/internal/db"
 )
+
+type Role struct {
+	Code        RoleType
+	Name        string
+	Description string
+}
+
+type RoleType = db.Role
+
+const (
+	RoleUser    = db.RoleUser
+	RoleManager = db.RoleManager
+	RoleAdmin   = db.RoleAdmin
+)
+
+func Roles() []Role {
+	return []Role{
+		{
+			Name:        "Пользователь",
+			Code:        RoleUser,
+			Description: "Может работать с инцидентами",
+		},
+		{
+			Name:        "Менеджер",
+			Code:        RoleManager,
+			Description: "Может выполнять все операции, кроме изменения пользователей и команд",
+		},
+		{
+			Name:        "Администратор",
+			Code:        RoleAdmin,
+			Description: "Может выполнять все операции",
+		},
+	}
+}
+
+func RoleTypes() []RoleType {
+	return []RoleType{
+		RoleUser,
+		RoleManager,
+		RoleAdmin,
+	}
+}
 
 // CreateUser
 type CreateUser struct {
@@ -12,7 +54,7 @@ type CreateUser struct {
 	Email    string
 	Password string //nolint:gosec
 	TeamID   int64
-	RoleIDs  []int64
+	Role     RoleType
 }
 
 // UpdateUser
@@ -22,7 +64,7 @@ type UpdateUser struct {
 	Email    *string
 	Password *string //nolint:gosec
 	TeamID   *int64
-	RoleIDs  *[]int64
+	Role     *RoleType
 }
 
 type User struct {
@@ -30,7 +72,7 @@ type User struct {
 	Username  string
 	Email     string
 	TeamID    int64
-	Roles     []dict.Entity
+	Role      RoleType
 	CreatedAt time.Time
 	UpdatedAt time.Time
 }
